# sc2-theorycrafter

./: .gitignore  ABILITY_VALUES.md  BUILDING_DATA.md  CLAUDE.md  README.md  TODO.md  pyproject.toml
src/sc2tc/: __init__.py  extract.py  patch_eras.py
src/sc2tc/agent/: __init__.py  agent.py  backends.py  cli.py  tools.py
src/sc2tc/calc/: breakpoints.py  build_data.py  cli.py  patch_config.py  planner.py  planner_cli.py  production_data.py  timing.py  timing_cli.py  upgrade_data.py
src/sc2tc/db/: __init__.py  build.py  extract_gamedata.py  map_gamedata.py  schema.sql  seed_5015.py  seed_5016.py
tests/: test_agent.py  test_breakpoints.py  test_planner.py  test_timing.py
